z-index fix

--- a/css/drman.css
+++ b/css/drman.css
@@ -724,6 +724,7 @@ overflow: hidden;
 .team .box .data{
     display: flex;
     position: relative;
+    overflow: hidden;
 }
 
 
@@ -736,6 +737,7 @@ max-height: 100%;
 border-bottom: 2px solid black;
 transition: 2s;
 filter: grayscale(100%);
+z-index: -1;
 
 
 
